Fix layout issues

--- a/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
+++ b/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
@@ -243,6 +243,7 @@ box-shadow: inset 0px 53px 5px -37px rgba(0,0,0,0.38);*/
     background-color: #f5f6f6;
     background-image: none;
     width: 100%;
+    padding-bottom: 25px;
 }
 .cPhil-title-boxes.cCloudNative {
     background-image: none;
